refactor(infrastructure): updating mapping method, changing immutable to mutable list creation